@@ -1,0 +1,1 @@
+{% extends "djinn_news/liveblogupdate_edit.html" %}
